[gd_scene load_steps=12 format=3 uid="uid://bbkyd0dpqispx"]

[ext_resource type="Script" uid="uid://co7dsp8ma3kn1" path="res://game/ui/UpgradeDialog.gd" id="1_hhp1d"]
[ext_resource type="Texture2D" uid="uid://dcej23lij6qx6" path="res://assets/previews/wizard.png" id="1_xw4k8"]
[ext_resource type="PackedScene" uid="uid://dd05jwn2e0pwo" path="res://game/ui/UpgradeBar.tscn" id="2_4gfvd"]
[ext_resource type="Texture2D" uid="uid://ddstl6xa8p27f" path="res://assets/sprites/AttackIcon.png" id="3_akaie"]
[ext_resource type="Texture2D" uid="uid://bbc2prhiavreg" path="res://assets/previews/swordman.png" id="3_xw4k8"]
[ext_resource type="Texture2D" uid="uid://dqblvepmhrcpg" path="res://assets/previews/priest.png" id="4_8q8gg"]
[ext_resource type="Texture2D" uid="uid://d2okn1xoecys1" path="res://assets/sprites/SpeedIcon.png" id="4_ayyvs"]
[ext_resource type="Texture2D" uid="uid://byl66rwvmg4jn" path="res://assets/previews/frostmage.png" id="5_akaie"]
[ext_resource type="Texture2D" uid="uid://ny7udmpni1g4" path="res://assets/sprites/HealthIcon.png" id="5_cu0jl"]
[ext_resource type="Texture2D" uid="uid://b76ampgm3xceq" path="res://assets/previews/knight.png" id="6_ayyvs"]
[ext_resource type="LabelSettings" uid="uid://gh8y4uqq4gu6" path="res://data/resources/LabelSettingsCardText.tres" id="10_q838u"]

[node name="UpgradeDialog" type="PanelContainer"]
custom_minimum_size = Vector2(240, 210)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1.0
offset_right = -720.0
offset_bottom = -331.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.5, 1.5)
script = ExtResource("1_hhp1d")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="PanelContainer1" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="WizardContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer1"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/PanelContainer1/WizardContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("1_xw4k8")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer1/WizardContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="Damage" parent="VBoxContainer/PanelContainer1/WizardContainer/VBoxContainer" instance=ExtResource("2_4gfvd")]
custom_minimum_size = Vector2(16, 11)
layout_mode = 2
upgradeType = "attackDamage"
iconTexture = ExtResource("3_akaie")

[node name="Speed" parent="VBoxContainer/PanelContainer1/WizardContainer/VBoxContainer" instance=ExtResource("2_4gfvd")]
custom_minimum_size = Vector2(0, 11)
layout_mode = 2
iconTexture = ExtResource("4_ayyvs")

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="SwordmanContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer2"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/PanelContainer2/SwordmanContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_xw4k8")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer2/SwordmanContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="Damage" parent="VBoxContainer/PanelContainer2/SwordmanContainer/VBoxContainer" instance=ExtResource("2_4gfvd")]
custom_minimum_size = Vector2(16, 11)
layout_mode = 2
defenderType = "swordman"
upgradeType = "attackDamage"
iconTexture = ExtResource("3_akaie")

[node name="Speed" parent="VBoxContainer/PanelContainer2/SwordmanContainer/VBoxContainer" instance=ExtResource("2_4gfvd")]
custom_minimum_size = Vector2(0, 11)
layout_mode = 2
defenderType = "swordman"
iconTexture = ExtResource("4_ayyvs")

[node name="Health" parent="VBoxContainer/PanelContainer2/SwordmanContainer/VBoxContainer" instance=ExtResource("2_4gfvd")]
custom_minimum_size = Vector2(0, 11)
layout_mode = 2
defenderType = "swordman"
upgradeType = "health"
iconTexture = ExtResource("5_cu0jl")

[node name="PanelContainer3" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="PriestContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer3"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/PanelContainer3/PriestContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("4_8q8gg")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer3/PriestContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="Speed" parent="VBoxContainer/PanelContainer3/PriestContainer/VBoxContainer" instance=ExtResource("2_4gfvd")]
custom_minimum_size = Vector2(0, 11)
layout_mode = 2
defenderType = "priest"
iconTexture = ExtResource("4_ayyvs")

[node name="PanelContainer4" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="FrostwizardContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer4"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/PanelContainer4/FrostwizardContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("5_akaie")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer4/FrostwizardContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="Damage" parent="VBoxContainer/PanelContainer4/FrostwizardContainer/VBoxContainer" instance=ExtResource("2_4gfvd")]
custom_minimum_size = Vector2(16, 11)
layout_mode = 2
defenderType = "frostwizard"
upgradeType = "attackDamage"
iconTexture = ExtResource("3_akaie")

[node name="Speed" parent="VBoxContainer/PanelContainer4/FrostwizardContainer/VBoxContainer" instance=ExtResource("2_4gfvd")]
custom_minimum_size = Vector2(0, 11)
layout_mode = 2
defenderType = "frostwizard"
iconTexture = ExtResource("4_ayyvs")

[node name="PanelContainer5" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="KnightContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer5"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/PanelContainer5/KnightContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("6_ayyvs")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer5/KnightContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="Health" parent="VBoxContainer/PanelContainer5/KnightContainer/VBoxContainer" instance=ExtResource("2_4gfvd")]
custom_minimum_size = Vector2(0, 11)
layout_mode = 2
defenderType = "knight"
upgradeType = "health"
iconTexture = ExtResource("5_cu0jl")

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="PointsLabel" type="Label" parent="VBoxContainer/CenterContainer"]
layout_mode = 2
text = "Points left: 99"
label_settings = ExtResource("10_q838u")
